--- a/client/styles/topBar.css
+++ b/client/styles/topBar.css
@@ -11,8 +11,15 @@
   box-shadow: 0 1px 3px #ec6336b5;
 }
 
+.header-logo-font{
+  position: flex;
+  left: 0;
+  margin-top: 15px;
+  margin-left: 0px;
+}
+
 .header-logo {
-  position: fixed;
+  position: flex;
   left: 0;
   margin-top: 5px;
   margin-left: 50px;
