--- a/client/styles/App.css
+++ b/client/styles/App.css
@@ -1,13 +1,5 @@
-.App {
-  text-align: center;
-  height: 100%;
-}
-
-#root {
-  height: 100%;
-}
-
 html {
   background-image: linear-gradient(#013c64, #020849);
-  height: 100%;
+  height: 3000px;
+  text-align: center;
 }
