--- a/client/styles/Home.css
+++ b/client/styles/Home.css
@@ -1,7 +1,3 @@
-.header{
-    display: block;
-}
-
 .intro-container{
     /* display: flex; */
     /* flex-direction: row; */
@@ -18,9 +14,8 @@
     max-width: 80%;
     margin-top: 150px;
     margin-left: 250px;
+    color: white;
 }
-
-
 
 /* display: flex;
     flex: 1;
