--- a/client/styles/People.css
+++ b/client/styles/People.css
@@ -1,10 +1,14 @@
 .crew-container {
-    border: 3px solid #ffffff;
-    max-width: 80%;
+
+    border: 3px solid #e4e0d7;
+    border-radius: 10px;
+    box-shadow: 1px -2px 30px 10px rgb(22, 22, 67) inset;
+    max-width: 900px;
     margin-top: 75px;
     margin-left: 200px;
     padding: 15px;
-    color: white;
+    color: #e4e0d7;
+    font-family:'Josefin Sans', sans-serif;
 }
 
 .all-crew-cards {
