--- a/client/styles/topBar.css
+++ b/client/styles/topBar.css
@@ -11,6 +11,8 @@
   border: 1.2px solid #ec633677;
   box-shadow: 0 1px 3px #ec6336b5;
   background-color: #013c64;
+  z-index:10;
+  
 }
 
 .header-logo-font{
@@ -30,4 +32,7 @@
   .login-button-container{
     display: flex;
     margin-top: 30px;
+    font-family:'Josefin Sans', sans-serif;
+    color: rgb(221, 214, 201)
+    
   }
