--- a/client/styles/Home.css
+++ b/client/styles/Home.css
@@ -1,10 +1,12 @@
-.centered {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
+.whole{
+    display: block;
+}
 
 .intro-container{
+    margin-top: 150px;
+    align-self: center;
+    margin-left: auto;
+    margin-right: auto;
     /* display: flex; */
     /* flex-direction: row; */
     /* flex: 1; */
@@ -21,6 +23,7 @@
     row-gap: 40px;
     max-width: 80%; */
     display: flex;
+    
     justify-content: space-around;
     flex-wrap: wrap;
     /* margin-top: 150px;
@@ -131,12 +134,15 @@
 
 
 .demo-container{
+    align-self: center;
+    margin-left: auto;
+    margin-right: auto;
     border: 3px solid #e4e0d7;
     border-radius: 10px;
     box-shadow: 1px -2px 30px 10px rgb(22, 22, 67) inset;
     max-width: 900px;
     margin-top: 75px;
-    margin-left: 200px;
+    /* margin-left: 200px; */
     padding: 20px;
     color: #e4e0d7;
     font-family:'Josefin Sans', sans-serif;
