--- a/client/styles/People.css
+++ b/client/styles/People.css
@@ -1,11 +1,13 @@
 .crew-container {
+    margin-top: 75px;
+    align-self: center;
+    margin-left: auto;
+    margin-right: auto;
 
     border: 3px solid #e4e0d7;
     border-radius: 10px;
     box-shadow: 1px -2px 30px 10px rgb(22, 22, 67) inset;
-    max-width: 900px;
-    margin-top: 75px;
-    margin-left: 200px;
+    max-width: 900px; 
     padding: 15px;
     color: #e4e0d7;
     font-family:'Josefin Sans', sans-serif;
@@ -18,10 +20,10 @@
 }
 
 .crew-card {
-    padding: 20px;
+    padding: 10px;
     border-radius: 5px;
     background-color: rgb(222, 145, 41);
-    margin: 10px;
+    margin: 8px;
 }
 
 .crew-card:hover{
