--- a/client/styles/App.css
+++ b/client/styles/App.css
@@ -1,5 +1,6 @@
 html {
-  background-image: linear-gradient(#013c64, #020849);
-  height: 4500px;
-  text-align: center;
+    background-image: linear-gradient(#013c64, #020849);
+    background-repeat: no-repeat;
+    background-size: auto;
+    text-align: center;
 }
