--- a/client/styles/Docs.css
+++ b/client/styles/Docs.css
@@ -6,25 +6,28 @@ body {
   .container {
     position: relative;
     top: 100px;
-    max-width: 1050px;
+    max-width: 1100px;
     margin: 0 auto;
     display: flex;
+    margin-bottom: 130px;
   }
   
   main {
-    max-width: 700px;
-    background-color: #161822c7;
-    padding: 16px;
+    max-width: 625px;
+    /* background-color: #161822c7; */
+    padding: 60px;
     border-radius: 5px;
     margin-left: 8px;
     text-align: left;
+    border: 3px solid #e4e0d7;
+    border-radius: 10px; 
+    box-shadow: 1px -2px 30px 10px rgb(22, 22, 67) inset;
   }
   
   nav {
-    padding-top: 100px;
-    width: 330px;
-    min-width: 250px;
-    padding: 16px;
+    width: 280px;
+    min-width: 200px;
+    padding: 40px;
     margin-left: 8px;
     border-radius: 5px;
     align-self: flex-start;
@@ -33,7 +36,18 @@ body {
     height: 1000px;
     overflow: auto;
     text-align: left;
-    background-color: #1f2233c3;
+    /* background-color: #1f2233c3; */
+    border: 3px solid #e4e0d7;
+    border-radius: 10px; 
+    box-shadow: 1px -2px 30px 10px rgb(22, 22, 67) inset;
+  }
+
+  nav > h1 {
+    margin-top: -35px;
+  }
+
+  .toc-img {
+    margin-top: -35px;
   }
   
   @media screen and (max-width: 900px) {
