--- a/client/styles/Home.css
+++ b/client/styles/Home.css
@@ -1,44 +1,24 @@
 .whole{
-    display: block;
+    /* display: block; */
+    
 }
 
 .intro-container{
-    margin-top: 150px;
+    margin-top: 110px;
     align-self: center;
     margin-left: auto;
     margin-right: auto;
-    /* display: flex; */
-    /* flex-direction: row; */
-    /* flex: 1; */
     max-width: 900px;
-    /* justify-content: space-around;   */
-    /* align-items: center;
-    margin: 50px; */
     border: 3px solid #e4e0d7;
     border-radius: 10px; 
     box-shadow: 1px -2px 30px 10px rgb(22, 22, 67) inset;
-    /* display: grid;
-    grid-template-columns: 1fr 1fr;
-    column-gap: 20px;
-    row-gap: 40px;
-    max-width: 80%; */
     display: flex;
-    
     justify-content: space-around;
     flex-wrap: wrap;
-    /* margin-top: 150px;
-    margin-left: 200px; */
     color: #e4e0d7;
     font-family:'Josefin Sans', sans-serif;
     justify-content: center;
 }
-
-/* display: flex;
-    flex: 1;
-    margin-left: 70px;
-    margin-right: 35px;
-    max-width: 500px;
-    align-items: center; */
 
     @keyframes float {
         0% {
@@ -75,6 +55,7 @@
     flex: 1;
     min-width: 40%;
     padding: 50px;
+    padding-bottom: 0px;
 }
 
 .highlights{
@@ -88,8 +69,13 @@
     display: inline-block;
     flex: 1;
     min-width: 40%;
-    padding: 50px;
+    padding: 10px;
 }
+
+.description {
+    max-width: 600px;
+}
+
 .features{
     display: inline-block;
     flex: 1;
