--- a/client/styles/Docs.css
+++ b/client/styles/Docs.css
@@ -24,6 +24,18 @@ body {
     box-shadow: 1px -2px 30px 10px rgb(22, 22, 67) inset;
   }
 
+  .code {
+    position: relative;
+    overflow: auto;
+    margin: 5px 0;
+    padding: 1rem 0 1rem 1rem;
+    border-radius: 10px;
+    background-color: black;
+    max-width: 650px;
+    min-width: 320px;
+    color: whitesmoke
+  }
+
   nav {
     width: 280px;
     min-width: 200px;
